--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "react-native-hw-01_b",
-    "slug": "react-native-hw-01_b",
+    "name": "react-native-hw-01",
+    "slug": "react-native-hw-01",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -11,7 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "jsEngine": "hermes",
+
     "updates": {
       "fallbackToCacheTimeout": 0
     },
